[fix] simple theme: unset width for images on mobile layout
* fix fallout from 2fbedc4316b4e8a8bce8bb9506f59aa61e1a2666
-> similar to 14fb187548a58144c5cd13c9292fcc52f5a025c5
* change: set image height to 10rem
-> this is in my opinion more sensible size for mobile

--- a/searx/static/themes/simple/src/less/definitions.less
+++ b/searx/static/themes/simple/src/less/definitions.less
@@ -277,7 +277,7 @@
 @results-margin: 0.125rem;
 @result-padding: 1rem;
 @results-image-row-height: 12rem;
-@results-image-row-height-phone: 6rem;
+@results-image-row-height-phone: 10rem;
 @search-width: 44rem;
 // heigh of #search, see detail.less
 @search-height: 7.6rem;
